# atm

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  mkarchive.sh  waf  wscript
src/: blumer_substrings.hpp  branching_substrings.hpp  cmdline.h  coarse_ngrams.hpp  coarse_substrings.hpp  config.h.in  esa.hxx  main.cpp  ngrams.hpp  purity_maximal_substrings.hpp  sast.hpp  segments.hpp  single_range.hpp  substrings.hpp  substrings_from_longest.hpp  wscript
src/atm/: blumer_substrings.hpp  branching_substrings.hpp  chunked_sliding_window.hpp  coarse_ngrams.hpp  coarse_substrings.hpp  ngrams.hpp  purity_maximal_substrings.hpp  segments.hpp  single_range.hpp  substrings.hpp  substrings_from_longest.hpp
src/libatm/: wscript
src/libatm/atm/: blumer_substrings.hpp  branching_substrings.hpp  chunked_sliding_window.hpp  purity_maximal_substrings.hpp  segments.hpp  substrings.hpp  substrings_from_longest.hpp  words.hpp
src/libsast/: wscript
src/libsast/sast/: sast.hpp
src/sast/: sast.hpp
